Integrated cloudinary library, added a new set of images and changed the layout to use the slow fashion theme

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,19 @@
 .i-va{
   vertical-align: -0.125em;
 }
+video#bgvideo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background: url(https://res.cloudinary.com/dbmataac4/video/upload/v1616437188/workshop/hero_video.jpg) no-repeat;
+  background-size: cover;
+  }
