Updated product gallery component to be a react function rather than a class

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ video#bgvideo {
     background: url(placeholder.jpg) no-repeat;
     background-size: cover;
     }
+
+.whitelink {
+    color: white;
+    text-decoration: none;
+}  
